VR: Return to DD home rather when exiting WebVR with browsing disabled

If VR browsing is disabled and the pages requests to exit WebVR, we
should return the user to DD home rather than asking them to take their
headset off.

Bug: 788910
Change-Id: I0c5dc00af871c04744b8b0b27769281bb515b480
Reviewed-on: https://chromium-review.googlesource.com/868236
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Yash Malik <ymalik@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529498}
Former-commit-id: 6a1d3c5ec4b916f3007a933812da0fd074f0ef3c